new libraries added - gsap, axios

--- a/frontend/app-vite/main.css
+++ b/frontend/app-vite/main.css
@@ -1,3 +1,23 @@
-.test{
-    color: red;
+.h-dvh-full{
+    height: 100dvh;
 }
+
+
+
+/* 
+JAVASCRIPT IMPORT TO USE GSAP
+
+import { gsap } from "gsap";
+import { Flip } from "gsap/Flip";
+import { ScrollTrigger } from "gsap/ScrollTrigger";
+import { Observer } from "gsap/Observer";
+import { ScrollToPlugin } from "gsap/ScrollToPlugin";
+import { Draggable } from "gsap/Draggable";
+import { EaselPlugin } from "gsap/EaselPlugin";
+import { MotionPathPlugin } from "gsap/MotionPathPlugin";
+import { PixiPlugin } from "gsap/PixiPlugin";
+import { TextPlugin } from "gsap/TextPlugin";
+
+gsap.registerPlugin(Flip, ScrollTrigger, Observer, ScrollToPlugin, Draggable, EaselPlugin, MotionPathPlugin, PixiPlugin, TextPlugin); 
+
+*/
